-The catacomb barrier keys now have a cool animation when you use them
-Spooky mod summon weapons now have much better enemy targeting, and now have proper right click targeting
-Spooky mod music boxes now produce music notes when turned on like vanilla's music boxes, and they now display the actual name and composer of the song in their item tooltip
-The valley of eyes pylon can now be used regardless of how many town npcs are near it (You will still need to place it in the valley of eyes to use it)
-Fixed an issue with the old hunter's crossbow being positioned on the player weirdly when held
-Fixed a strange issue with the gore monger armor's aura where it became nearly invisible if you didnt have any after-images or pulsing outlines caused by certain armors
-Fixed a ton of spooky mod item sell prices, nerfed ones that were too expensive, and buffed ones that were too cheap
-Fixed certain items in the mod that were supposed to have sell prices but didnt have any
-Fixed certain items in the mod not having journey mode researchability

Enemies:

-Spooky dance ghosts no longer drop money
-Flies, big flies, little spiders, and tiny ghosts can now be caught with bug nets
-Enemies in spooky mod that have different variants now have different bestiary entires (like the fuzzbats and putty slimes)
-Putty slimes now use vanilla slime ai since there old ai was kind of annoying in game and was annoying to fix/work with
-Marigold jumping ai has been polished a bit to look and behave better, and they will now make a sound every time they spit a spore at you
-Tortumors and Giant Tortumors can no longer move through blocks
-All natural spawns will be disabled during spooky mod's boss fights
-Increased contact damage scaling for all spooky mod bosses in expert and master mode because it was way too weak before
-Fixed vanilla's underworld enemies sometimes spawning while in the valley of eyes