@@ -10,6 +10,8 @@ namespace Spooky.Content.Tiles.MusicBox
     {
         public override void SetStaticDefaults()
         {
+            ItemID.Sets.CanGetPrefixes[Type] = false;
+			ItemID.Sets.ShimmerTransformToItem[Type] = ItemID.MusicBox;
             MusicLoader.AddMusicBox(Mod, MusicLoader.GetMusicSlot(Mod, "Content/Sounds/Music/RotGourd"), 
             ModContent.ItemType<RotGourdBox>(), ModContent.TileType<RotGourdBoxTile>());
         }
